fix: added top padding to hero section to prevent fixed navbar from overlapping content

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 
   background: rgb(0, 0, 0); /* slightly transparent */
  
-  padding: 16px 0;
+  padding: 12px 1px;
   width: 100%;
   box-shadow: 0 2px 10px rgba(0,0,0,0.25); /* subtle shadow */
 }
@@ -494,7 +494,7 @@ section {
 @media (max-width: 768px) {
   /* Hero section */
   .hero {
-    padding: 60px 20px;
+    padding: 0px 10px;
     text-align: center;
   }
   .hero-container {
@@ -513,7 +513,7 @@ section {
   /* Navbar */
   .header-container {
     gap: 12px;
-    padding: 8px 15px;
+    padding: 0px 15px;
   
   }
 
@@ -554,7 +554,8 @@ body {
   padding: 0;
 }
 .hero{
-  padding-top: 100px;
+  padding-top: 130px;
+  padding-bottom: 100px;
 }
 
 .about .container,
